<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/text_folder"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:theme="@style/TextViewMedium" />
    <TextView
        android:id="@+id/tv_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/text_video"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:theme="@style/TextViewMedium" />
    <TextView
        android:id="@+id/tv_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/text_doc"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:theme="@style/TextViewMedium" />

</LinearLayout>