<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:ellipsize="end"
        android:background="@color/colorBackground"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/select_any_one_option"
        android:textAllCaps="false"
        android:textColor="@color/colorGrey"
        android:textSize="17sp"
        android:theme="@style/TextViewRegular" />

    <TextView
        android:id="@+id/tv_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_students"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="17sp"
        android:theme="@style/TextViewMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/tv_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_teachers"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="17sp"
        android:theme="@style/TextViewMedium" />

</LinearLayout>