<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ui.classdetails.AddNewLiveClassActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_add_new_live_class"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="19sp"
                android:theme="@style/TextViewExtraBold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_live_class_name_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="17sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_live_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_live_class_name"
            android:textStyle="bold"
            android:theme="@style/MyTheme.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_meeting_url_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_live_class_name_layout"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="17sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_meeting_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_meeting_url"
            android:inputType="textUri"
            android:textStyle="bold"
            android:theme="@style/MyTheme.EditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_meeting_id_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_meeting_url_layout"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/colorSecondaryText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_meeting_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/text_meeting_id"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:theme="@style/MyTheme.EditText">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_teacher_name_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_meeting_id_layout"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/colorSecondaryText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/text_teaher_name"
            android:textStyle="bold"
            android:theme="@style/MyTheme.EditText">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/spin_schedule_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_teacher_name_layout"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:hint="@string/text_schedule_day"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="17sp"
        android:theme="@style/TextViewMedium" />

    <TextView
        android:id="@+id/spin_schedule_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_teacher_name_layout"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/spin_schedule_day"
        android:gravity="center_horizontal"
        android:hint="@string/text_schedule_time"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="17sp"
        android:theme="@style/TextViewMedium" />

    <Button
        android:id="@+id/btn_create_class"
        style="@style/ButtonBold"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_live_class"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="19sp" />

    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/colorWhite"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="74dp"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_5" />
    </RelativeLayout>


</RelativeLayout>